# anki-cards-oop

./: .gitignore  README.md  pyproject.toml  words.json  words.tsv  words.txt
src/anki/: anki.py  loader.py  main.py  ui.py
src/anki/tests/: test_anki.py  test_integration.py  test_loader.py
tests/: test_anki.py  test_anki_internal.py  test_loader.py  test_loader_internal.py  test_loader_registry.py  test_main.py  test_project_structure.py  test_tests.py  test_type_hints.py  test_ui.py
