[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "anki"
version = "0.0.1"
authors = [{ name = "Igor Bocharov", email = "igor.bocharov56@yandex.ru" }]
description = "Игра Карты Anki"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests"]

[project.optional-dependencies]
dev = ["pytest", "types-requests>=2.33.0", "mypy>=1.15.0"]


[project.scripts]
anki = "anki.main:main"
